updated README & Contact

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
       <div class="col-lg-6 col-12" id="contactImage">
       </div>
       <div class="col-12 col-lg-6">
-        <form class="flex-column d-flex align-items-center justify-content-center">
+        <form class="flex-column min-vh-100 d-flex align-items-center justify-content-center">
           <h1 class="text-center">Shoot me a message..</h1>
           <div class="form-group">
             <label>First Name</label>
